--- a/SOURCE/static/index.html
+++ b/SOURCE/static/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-  YEAAAA
-  <script src="/app_demo_test.v_pack.js"></script>
-  <script src="/app_root.v_pack.js"></script>
+  <[|.V_Core9.|]>
+  <script src="/rootApplication.V-core9.js"></script>
+  <script src="/V_DisplayDriver.V-core9.js"></script>
+  <script src="/V_DomPrinter.V-core9.js"></script>
 </body>
 
 </html>
