--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Security-Policy" content="script-src  http://localhost:420">
   <meta charset="utf-8">
-  <link rel="canonical" href="http://localhost:420" />
+  <link rel="canonical" href="https://6fe9-178-220-88-161.ngrok.io/" />
   <title><[|.V_Core9.|]> - YEAA PAGE</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#2196f3">
