yea many stuff at once

--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -1,40 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="canonical" href="https://v-core9tech-demo.vercel.app/" />
-  <title><[|.V_Core9.|]> - YEAA PAGE</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="theme-color" content="#2196f3">
-
-  <link rel="icon" href="/assets/img/logo.png">
-  <link rel="apple-touch-icon" href="/assets/img/logo.png">
-  <link href="/manifest.webmanifest" rel="manifest">
-
   <link href="/assets/style/css/main_defaults.css" rel="stylesheet">
   <script src="/rootApplication.V-core9.js"></script>
-  <script src="/V_DisplayDriver.V-core9.js"></script>
-
-  <style> 
-    :root {
-        --default-padding: 1em;
-      }
-
-      img {
-        width: calc(100% - var(--default-padding) - var(--default-padding) );
-        height: auto;
-      }
-  </style>
-  <script>
-    function testCallbackFunction(msg = "Empty msg.") {
-      alert(msg)
-    }
-  </script>
 </head>
 
 <body>
 </body>
 
 </html>
-
