yea added onload trigger for template when loaded into view first time...need to add method to templates/drawer to be able to save that data...or something similar to that

--- a/SOURCE/static/index.html
+++ b/SOURCE/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link href="/assets/style/css/main_defaults.css" rel="stylesheet">
-  <script src="/rootApplication.V-core9.js"></script>
+  <script src="/homepage.V-core9.js"></script>
 </head>
 
 <body>
