--- a/PUBLIC/admin.html
+++ b/PUBLIC/admin.html
@@ -3,7 +3,7 @@
 
 <head>
   <link href="/assets/style/css/main_defaults.css" rel="stylesheet">
-  <script src="/homepage.V-core9.js"></script>
+  <script src="/vadmin.V-core9.js"></script>
 </head>
 
 <body>
