--- a/SOURCE/FrontEnd/v_modules/.WIP._dev/_combined-sample/dbg_ui.html
+++ b/SOURCE/FrontEnd/v_modules/.WIP._dev/_combined-sample/dbg_ui.html
@@ -39,7 +39,6 @@
     .tabsButtons button:hover {
       background: #0c538c;
       color: white;
-      cursor: pointer;
     }
 
     .singleShotCode {
@@ -110,7 +109,6 @@
       color: white;
       font-size: 20px;
       padding: 5px 15px;
-      cursor: pointer;
       position: relative;
       z-index: 50;
     }
@@ -183,9 +181,9 @@
 
   <script type="application/javascript" src="./js/dbg_ui.js"></script>
 
-  <div class="container draggableJS resizableJS snappableJS" id='demo1'>
+  <div class="v_box draggableJS resizableJS snappableJS" id='demo1'>
     <div class="con-header dragHandleJS">
-      <p>DRAG USING MEEE</p>
+      <p>Drag, Resize and Snap to side [ v_box ].</p>
       <div class='options'>
         <button onclick='snapLeftSideButton(this)'><</button>
         <button onclick='snapRightSideButton(this)'>></button>
@@ -197,9 +195,9 @@
     </div>
   </div>
   
-  <div class="container draggableJS" id='demo2'>
+  <div class="v_box draggableJS" id='demo2'>
     <div class="con-header dragHandleJS">
-      DRAG USING MEEE
+      Drag and Resize [ v_box ]
     </div>
     <div class="con-body">
     </div>
@@ -207,9 +205,9 @@
     </div>
   </div>
   
-  <div class="container draggableJS resizableJS" id='demo3'>
+  <div class="v_box draggableJS resizableJS" id='demo3'>
     <div class="con-header dragHandleJS">
-      DRAG USING MEEE
+      Only Drag around [ v_box ]
     </div>
     <div class="con-body">
     </div>
