--- a/SOURCE/FrontEnd/v_modules/.WIP._dev/_combined-sample/dbg_ui.html
+++ b/SOURCE/FrontEnd/v_modules/.WIP._dev/_combined-sample/dbg_ui.html
@@ -6,6 +6,7 @@
     body {
       background: #444;
       color: white;
+
     }
 
     .tab {
@@ -153,33 +154,9 @@
 </head>
 
 <body>
-  <div class='docs'>
-    <h4>Shortcodes:</h4>
-    <div class="singleShotCode">
-      <p><span class="number">1.</span> [Q + W + E] => <span style="color: orange;">debugWindowTrigger()</span> </p>
-      <p class="description">Will trigger visibility of sidebar. Additional: has 3s delay between triggers when
-        continues pressing.</p>
-    </div>
-    <div class="singleShotCode">
-      <p><span class="number">2.</span> [alt + Enter] => <span style="color: orange;">triggerFullscreen()</span> </p>
-      <p class="description">FullScreen trigger function. Additional: has 3s delay between triggers when continues
-        pressing.</p>
-    </div>
-    <div class="singleShotCode">
-      <p><span class="number">3.</span> [alt + C] => <span style="color: orange;">closeWindowFunc()</span> </p>
-      <p class="description">Will just close this tab.</p>
-      <p style="color:red;">Disabled</p>
-    </div>
-    <hr>
-    <h4>Modals</h4>
-    <button onclick="showRootModal();">Show Root Modal</button>
-  </div>
 
 
 
-  <div id="debugContainer"></div>
-
-  <script type="application/javascript" src="./js/dbg_ui.js"></script>
 
   <div class="v_box draggableJS resizableJS snappableJS" id='demo1'>
     <div class="con-header dragHandleJS">
@@ -190,24 +167,56 @@
       </div>
     </div>
     <div class="con-body ">
+      <div id="debugContainer"></div>
     </div>
     <div class="con-footer">
     </div>
   </div>
   
-  <div class="v_box draggableJS" id='demo2'>
+  <div class="v_box draggableJS resizableJS" id='demo2'>
     <div class="con-header dragHandleJS">
-      Drag and Resize [ v_box ]
+      ShortCuts Manager [ v_box - drag_resize]
     </div>
     <div class="con-body">
+      <div class='docs'>
+        <h4>Shortcodes:</h4>
+        <div class="singleShotCode">
+          <p><span class="number">1.</span> [Q + W + E] => <span style="color: orange;">debugWindowTrigger()</span> </p>
+          <p class="description">Will trigger visibility of sidebar. Additional: has 3s delay between triggers when
+            continues pressing.</p>
+        </div>
+        <div class="singleShotCode">
+          <p><span class="number">2.</span> [alt + Enter] => <span style="color: orange;">triggerFullscreen()</span> </p>
+          <p class="description">FullScreen trigger function. Additional: has 3s delay between triggers when continues
+            pressing.</p>
+        </div>
+        <div class="singleShotCode">
+          <p><span class="number">3.</span> [alt + C] => <span style="color: orange;">closeWindowFunc()</span> </p>
+          <p class="description">Will just close this tab.</p>
+          <p style="color:red;">Disabled</p>
+        </div>
+        <hr>
+      </div>
     </div>
     <div class="con-footer">
     </div>
   </div>
   
-  <div class="v_box draggableJS resizableJS" id='demo3'>
+  <div class="v_box draggableJS " id='demo3'>
     <div class="con-header dragHandleJS">
-      Only Drag around [ v_box ]
+      System Modals [ v_box - drag only]
+    </div>
+    <div class="con-body">
+      <h4>Modals</h4>
+      <button onclick="showRootModal();">Show Root Modal</button>
+    </div>
+    <div class="con-footer">
+    </div>
+  </div>
+  
+  <div class="v_box draggableJS resizableJS snappableJS " id='demo4'>
+    <div class="con-header dragHandleJS">
+      Cursor Debugger 
     </div>
     <div class="con-body">
     </div>
@@ -233,7 +242,7 @@
 
 <script type="text/javascript" src="./js/rcmenu.js" ></script>
 <script type="text/javascript" src="./js/ccursor.js" ></script>
-   
+<script type="application/javascript" src="./js/dbg_ui.js"></script>
 
 </body>
 
