setup looks quite nice at this point

--- a/PUBLIC/demo/index.html
+++ b/PUBLIC/demo/index.html
@@ -43,11 +43,12 @@
     }
 
     .singleShotCode {
-      background: #505050;
-      padding: 5px 10px;
-      color: white;
-      position: relative;
-      margin: 5px 0px;
+    background: #2196f330;
+    padding: 5px 10px;
+    color: white;
+    position: relative;
+    margin: 5px 0px;
+    border: 1px solid #03a9f436;
     }
 
     .singleShotCode p {
@@ -66,7 +67,7 @@
       position: absolute;
       left: 10px;
       top: 5px;
-      color: orange;
+      color: #03a9f4;
     }
 
     .rootModal {
@@ -148,7 +149,12 @@
       z-index: 0;
     }
 
-
+    .docs {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1em;
+}
     
   </style>
 </head>
@@ -160,7 +166,7 @@
 
   <div class="v_box draggableJS resizableJS snappableJS" id='demo1'>
     <div class="con-header dragHandleJS">
-      <p>Drag, Resize and Snap to side [ v_box ].</p>
+      <p>🔥 Debug Container [ v_box - drag_resize_snap].</p>
       <div class='options'>
         <button onclick='snapLeftSideButton(this)'><</button>
         <button onclick='snapRightSideButton(this)'>></button>
@@ -175,36 +181,35 @@
   
   <div class="v_box draggableJS resizableJS" id='demo2'>
     <div class="con-header dragHandleJS">
-      ShortCuts Manager [ v_box - drag_resize]
+      🔑 ShortKeys Manager [ v_box - drag_resize]
     </div>
     <div class="con-body">
       <div class='docs'>
         <h4>Shortcodes:</h4>
         <div class="singleShotCode">
           <p><span class="number">1.</span> [Q + W + E] => <span style="color: orange;">debugWindowTrigger()</span> </p>
-          <p class="description">Will trigger visibility of sidebar. Additional: has 3s delay between triggers when
-            continues pressing.</p>
+          <p class="description">Will trigger visibility of sidebar. </p>
         </div>
         <div class="singleShotCode">
           <p><span class="number">2.</span> [alt + Enter] => <span style="color: orange;">triggerFullscreen()</span> </p>
-          <p class="description">FullScreen trigger function. Additional: has 3s delay between triggers when continues
-            pressing.</p>
+          <p class="description">FullScreen trigger function. </p>
         </div>
         <div class="singleShotCode">
           <p><span class="number">3.</span> [alt + C] => <span style="color: orange;">closeWindowFunc()</span> </p>
           <p class="description">Will just close this tab.</p>
-          <p style="color:red;">Disabled</p>
+          <p style="background: red;width: auto;display: inline-flex;padding: 0.25em 1em;">Disabled</p>
         </div>
-        <hr>
       </div>
     </div>
     <div class="con-footer">
+      <note>Additional: has 3s delay between triggers when continues
+        pressing.</note>
     </div>
   </div>
   
   <div class="v_box draggableJS " id='demo3'>
     <div class="con-header dragHandleJS">
-      System Modals [ v_box - drag only]
+      🏹 System Modals [ v_box - drag only]
     </div>
     <div class="con-body">
       <h4>Modals</h4>
@@ -216,7 +221,7 @@
   
   <div class="v_box draggableJS resizableJS snappableJS " id='demo4'>
     <div class="con-header dragHandleJS">
-      Cursor Debugger 
+      🪁 Cursor Debugger 
     </div>
     <div class="con-body">
     </div>
